Add 3D training mode
* add graphs for 3D training
* add code to support 3D preprocessing
* add option to training commands to use 3D mode
* hide dialog in headless mode
* simplify & remove unused code